# There are the following dependencies
#     в”Ңв”Җв”¬в”Җв”Җв”Җв”Җв”Җв”Җв”¬в”Җв”җ           в”Ңв”Җв”¬в”Җв”Җв”Җв”Җв”¬в”Җв”җ            в”Ңв”Җв”¬в”Җв”Җв”Җв”Җв”Җв”Җв”¬в”Җв”җ
#     в”Ӯ в”ңв”Җв”Җв”Җв”Җв”Җв”Җв”Ө в”Ӯ           в”Ӯ в”ңв”Җв”Җв”Җв”Җв”Ө в”Ӯ            в”Ӯ в”ңв”Җв”Җв”Җв”Җв”Җв”Җв”Ө в”Ӯ
#     в”Ӯ в”ӮKeygenв”Ӯ в”Ӯ           в”Ӯ в”ӮSignв”Ӯ в”Ӯ            в”Ӯ в”ӮVerifyв”Ӯ в”Ӯ
#     в”Ӯ в”ңв”Җв”Җв”Җв”Җв”Җв”Җв”Ө в”Ӯ           в”Ӯ в”ңв”Җв”Җв”Җв”Җв”Ө в”Ӯ            в”Ӯ в”ңв”Җв”Җв”Җв”Җв”Җв”Җв”Ө в”Ӯ
#     в””в”Җв”ҙв”Җв”Җв”Җв”¬в”Җв”Җв”ҙв”Җв”ҳ           в””в”Җв”ҙв”Җв”¬в”Җв”Җв”ҙв”Җв”ҳ            в””в”Җв”ҙв”Җв”Җв”Җв”¬в”Җв”Җв”ҙв”Җв”ҳ
#           в”Ӯ                    в”Ӯ                       в”Ӯ
#           в”Ӯ                    в”Ӯ                       в”Ӯ
#           в”ңв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”јв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”җ     в”Ӯ
#           в”Ӯ                    в”Ӯ                 в”Ӯ     в”Ӯ
#           в”Ӯ                    в”Ӯ                 в”Ӯ     в”Ӯ
#       в”Ңв”Җв”Җв”Җв–јв”Җв”Җв”җ          в”Ңв”Җв”Җв”Җв”Җв”Җв”Җв–јв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”җ   в”Ңв”Җв”Җв”Җв”Җв–јв”Җв”Җв”Җв”Җв”Җв–јв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”җ
#       в”Ӯ PRNG в—„в”Җв”Җв”Җв”Җв”¬в”Җв”Җв”Җв”Җв”Җв”Ө Iso <-> Ideal в”ңв”Җв”Җв”Җв–ә   Elliptic Curves,   в”Ӯ
#       в””в”Җв”Җв”Җв–Ів”Җв”Җв”ҳ    в”Ӯ     в””в”Җв”Җв”Җв”Җв”Җв”Җв”¬в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”ҳ   в”Ӯ Pairings & Isogenies в”Ӯ
#           в”Ӯ       в”Ӯ            в”Ӯ            в””в”Җв”Җв”Җв–Ів”Җв”Җв”Җв”Җв”Җв”Җв”¬в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”ҳ
#           в”Ӯ       в”Ӯ            в”Ӯ                в”Ӯ      в”Ӯ
#       в”Ңв”Җв”Җв”Җв”ҙв”Җв”Җв”җ    в”Ӯ            в”Ӯ                в”Ӯ      в”Ӯ
#       в”Ӯ KLPT в—„в”Җв”Җв”Җв”Җв”ҳ            в”Ӯ     в”Ңв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”ҳ      в”Ӯ
#       в””в”Җв”Җв”Җв”¬в”Җв”Җв”ҳ                 в”Ӯ     в”Ӯ                 в”Ӯ
#           в”Ӯ                    в”Ӯ     в”Ӯ                 в”Ӯ
# в”Ңв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв–јв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”җ          в”Ӯ     в”Ӯ                 в”Ӯ
# в”Ӯ Quaternion orders в”Ӯ          в”Ӯ     в”Ӯ            в”Ңв”Җв”Җв”Җв”Җв–јв”Җв”Җв”Җв”җ
# в”Ӯ     and ideals    в”Ӯ          в”Ӯ     в”Ӯ            в”Ӯ GF(pВІ) в”Ӯ
# в””в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”¬в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”ҳ          в”Ӯ     в”Ӯ            в””в”Җв”Җв”Җв”Җв”¬в”Җв”Җв”Җв”ҳ
#           в”Ӯ           в”Ңв”Җв”¬в”Җв”Җв”Җв”Җв”Җв”Җв–јв”Җв”Җв”Җв”Җв”Җв”ҙв”Җв”Җв”¬в”Җв”җ            в”Ӯ
#     в”Ңв”Җв”Җв”Җв”Җв”Җв–јв”Җв”Җв”Җв”Җв”Җв”җ     в”Ӯ в”ңв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Ө в”Ӯ      в”Ңв”Җв”Җв”Җв”Җв”Җв–јв”Җв”Җв”Җв”Җв”Җв”җ
#     в”Ӯ MP BigInt в”Ӯ     в”Ӯ в”ӮPrecomputationsв”Ӯ в”Ӯ      в”Ӯ FP BigInt в”Ӯ
#     в””в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”ҳ     в”Ӯ в”ңв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Ө в”Ӯ      в””в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”ҳ
#                       в””в”Җв”ҙв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”ҙв”Җв”ҳ                    

add_subdirectory(common)
add_subdirectory(intbig)
add_subdirectory(quaternion)
add_subdirectory(precomp)
add_subdirectory(klpt)
add_subdirectory(gf)
add_subdirectory(ec)

add_subdirectory(id2iso)
add_subdirectory(protocols)

FOREACH(SVARIANT ${SVARIANT_S})
    string(TOLOWER ${SVARIANT} SVARIANT_LOWER)
    string(TOUPPER ${SVARIANT} SVARIANT_UPPER)
    set(SOURCE_FILES_VARIANT sqisign.c)
    # Library for SQIsign variant
    add_library(sqisign_${SVARIANT_LOWER} ${SOURCE_FILES_VARIANT})
    target_link_libraries(sqisign_${SVARIANT_LOWER} PUBLIC 
        ${LIB_PROTOCOLS_${SVARIANT_UPPER}} 
        ${LIB_ID2ISO_${SVARIANT_UPPER}} 
        ${LIB_KLPT_${SVARIANT_UPPER}} 
        ${LIB_QUATERNION} 
        ${LIB_PRECOMP_${SVARIANT_UPPER}} 
        ${LIB_INTBIG} 
        ${LIB_GF_${SVARIANT_UPPER}} 
        ${LIB_EC_${SVARIANT_UPPER}} 
        ${GMP} 
        sqisign_common_sys
    )

    target_include_directories(sqisign_${SVARIANT_LOWER} PUBLIC ${INC_PROTOCOLS} ${INC_INTBIG} ${INC_QUATERNION} ${INC_PRECOMP_${SVARIANT_UPPER}} ${INC_EC} ${INC_GF_${SVARIANT_UPPER}} ${INC_COMMON} ${INC_KLPT} ${INC_ID2ISO} ../include PRIVATE common/generic internal)
    target_compile_definitions(sqisign_${SVARIANT_LOWER} PUBLIC SQISIGN_VARIANT=${SVARIANT})

    # Library for SQIsign variant (test)
    add_library(sqisign_${SVARIANT_LOWER}_test  ${SOURCE_FILES_VARIANT})
    target_link_libraries(sqisign_${SVARIANT_LOWER}_test PUBLIC 
        ${LIB_PROTOCOLS_${SVARIANT_UPPER}} 
        ${LIB_ID2ISO_${SVARIANT_UPPER}} 
        ${LIB_KLPT_${SVARIANT_UPPER}} 
        ${LIB_QUATERNION} 
        ${LIB_PRECOMP_${SVARIANT_UPPER}} 
        ${LIB_INTBIG} 
        ${LIB_GF_${SVARIANT_UPPER}} 
        ${LIB_EC_${SVARIANT_UPPER}} 
        ${GMP} 
        sqisign_common_test
    )

    target_include_directories(sqisign_${SVARIANT_LOWER}_test PUBLIC ${INC_PROTOCOLS} ${INC_INTBIG} ${INC_QUATERNION} ${INC_PRECOMP_${SVARIANT_UPPER}} ${INC_EC} ${INC_GF_${SVARIANT_UPPER}} ${INC_COMMON} ${INC_KLPT} ${INC_ID2ISO} ../include PRIVATE common/generic internal)
    target_compile_definitions(sqisign_${SVARIANT_LOWER}_test PUBLIC SQISIGN_VARIANT=${SVARIANT})

    # Library with NIST API
    set(SOURCE_FILE_NISTAPI nistapi/${SVARIANT_LOWER}/api.c)
    add_library(sqisign_${SVARIANT_LOWER}_nistapi  ${SOURCE_FILE_NISTAPI})
    target_link_libraries(sqisign_${SVARIANT_LOWER}_nistapi PRIVATE sqisign_${SVARIANT_LOWER})
    target_include_directories(sqisign_${SVARIANT_LOWER}_nistapi PUBLIC nistapi/${SVARIANT_LOWER} PUBLIC ../include)

    # Library with NIST API (test)
    add_library(sqisign_${SVARIANT_LOWER}_test_nistapi ${SOURCE_FILE_NISTAPI})
    target_link_libraries(sqisign_${SVARIANT_LOWER}_test_nistapi PRIVATE sqisign_${SVARIANT_LOWER}_test)
    target_include_directories(sqisign_${SVARIANT_LOWER}_test_nistapi PUBLIC nistapi/${SVARIANT_LOWER})
ENDFOREACH()
